--- a/configs/hackathon_config.yml
+++ b/configs/hackathon_config.yml
@@ -1,6 +1,3 @@
-# SPDX-FileCopyrightText: Copyright (c) 2024-2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
-# SPDX-License-Identifier: Apache-2.0
-
 # NVIDIA NeMo Agent Toolkit 黑客松配置
 # 支持用户自定义OpenAI兼容API
 
@@ -8,7 +5,7 @@ general:
   use_uvloop: true
 
 functions:
-  internet_search:
+  tavily_search:
     _type: tavily_internet_search
     description: "使用Tavily API进行实时网络搜索"
   
@@ -16,23 +13,32 @@ functions:
     _type: current_datetime
     description: "获取当前日期和时间"
 
+  ip_obtain:
+    _type: ip_obtain
+    description: "获取当前机器的公网IP地址"
+
+  current_location:
+    _type: current_location
+    description: "获取IP对应的地理位置信息"
+
 llms:
-  # 默认使用Bailian API (用户可修改)
+  # 默认使用ModelScope API (用户可修改)
   default_llm:
     _type: openai
-    model_name: "qwen-plus"
-    api_key: "Your API Key"
-    base_url: "https://dashscope.aliyuncs.com/compatible-mode/v1"
+    model_name: "qwen3:30b"
+    api_key: "ollama"
+    base_url: "http://localhost:11434/v1/"
     temperature: 0.7
     max_tokens: 2048
 
 workflow:
   _type: react_agent
   tool_names:
-    - internet_search
-    - current_datetime
+    - ip_obtain
+    - current_location
+    # - tavily_search
+    # - current_datetime
   llm_name: default_llm
   verbose: true
   parse_agent_response_max_retries: 3
   max_iterations: 10
-
